--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "freezly",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Small utility for deeply freezing objects in JavaScript.",
   "main": "lib/index.js",
   "scripts": {
     "build": "nodely -s ./src -o ./lib",
-    "test": "eslint . && flow && jest"
+    "test": "lintly src && flow && jest"
   },
   "repository": {
     "type": "git",
@@ -24,19 +24,10 @@
   },
   "homepage": "https://github.com/dogma-io/freezly#readme",
   "devDependencies": {
-    "babel-eslint": "8.0.2",
-    "eslint": "4.10.0",
-    "eslint-config-standard": "10.2.1",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-node": "5.2.1",
-    "eslint-plugin-prettier": "2.3.1",
-    "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-standard": "3.0.1",
     "flow-bin": "0.58.0",
     "jest-cli": "21.2.1",
-    "nodely": "0.0.6",
-    "prettier": "1.8.1"
+    "lintly": "0.0.1",
+    "nodely": "0.0.6"
   },
   "jest": {
     "collectCoverage": true,
