--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   },
   "homepage": "https://github.com/dogma-io/freezly#readme",
   "devDependencies": {
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "22.2.2",
     "codecov": "3.0.0",
-    "jest-cli": "22.1.4",
-    "lintly": "0.0.19",
-    "nodely": "0.0.26"
+    "jest-cli": "22.2.2",
+    "lintly": "0.0.20",
+    "nodely": "0.0.27"
   },
   "jest": {
     "collectCoverage": true,
