--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
   "homepage": "https://github.com/dogma-io/freezly#readme",
   "devDependencies": {
     "babel-core": "^7.0.0-0",
-    "babel-jest": "22.4.1",
+    "babel-jest": "23.0.0-alpha.0",
     "codecov": "3.0.0",
-    "jest-cli": "22.4.2",
+    "jest-cli": "23.0.0-alpha.0",
     "lintly": "0.0.25",
-    "nodely": "0.0.29"
+    "nodely": "0.1.0"
   },
   "engines": {
     "node": ">= 6"
