--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib"
   ],
   "scripts": {
-    "build": "nodely -s ./src -o ./lib -n 1 # && npm run gen-types",
-    "gen-types": "flow gen-flow-files src --out-dir lib",
+    "build": "nodely -s ./src -o ./lib -n 1 && npm run gen-types",
+    "gen-types": "flow gen-flow-files src --ignore \".+/__tests__/.+\" --out-dir lib",
     "postpublish": "codecov",
     "prepublishOnly": "npm run build",
     "test": "lintly src && flow && jest"
@@ -34,11 +34,11 @@
   "homepage": "https://github.com/dogma-io/freezly#readme",
   "devDependencies": {
     "babel-core": "^7.0.0-0",
-    "babel-jest": "22.4.4",
+    "babel-jest": "23.0.1",
     "codecov": "3.0.2",
-    "jest": "22.4.4",
-    "lintly": "0.1.4",
-    "nodely": "0.1.6"
+    "jest": "23.0.1",
+    "lintly": "0.2.0",
+    "nodely": "0.4.0"
   },
   "engines": {
     "node": ">= 6"
