--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "nodely -s ./src -o ./lib -n 1 && npm run gen-types",
-    "gen-types": "flow gen-flow-files src --ignore \".+/__tests__/.+\" --out-dir lib",
+    "gen-types": "flow-copy-source --ignore \"**/__tests__/**\" src lib",
     "postpublish": "codecov",
     "prepublishOnly": "npm run build",
     "test": "lintly src && flow && jest"
@@ -33,13 +33,14 @@
   },
   "homepage": "https://github.com/dogma-io/freezly#readme",
   "devDependencies": {
-    "@babel/core": "7.5.4",
+    "@babel/core": "7.6.4",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "24.8.0",
+    "babel-jest": "24.9.0",
     "babel-preset-nodely": "0.4.2",
-    "codecov": "3.5.0",
-    "jest": "24.8.0",
-    "lintly": "0.3.0",
-    "nodely": "0.8.0"
+    "codecov": "3.6.1",
+    "flow-copy-source": "2.0.8",
+    "jest": "24.9.0",
+    "lintly": "0.4.0",
+    "nodely": "1.0.0"
   }
 }
